Improve message and send important and info messages.

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -11,6 +11,16 @@ singularity_broadcast {
 
   slack {
 
+    // To select the channel
+    channel {
+      important: "@felix"
+      important: ${?SLACK_CHANNEL_IMPORTANT}
+      info: "@felix"
+      info: ${?SLACK_CHANNEL_INFO}
+
+      infoLink: "https://gonitro.slack.com/messages/C7RST0KLG"
+    }
+
     // Setup at https://gonitro.slack.com/services/B2AU1HR6Z#service_setup
     url: "https://hooks.slack.com/services/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"
     url: ${?SLACK_URL}
