--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -2,11 +2,22 @@ singularity_broadcast {
   singularity {
     prodUrl: ""
     prodUrl: ${?SINGULARITY_PROD_URL}
-    devUrl: ""
-    devUrl: ${?SINGULARITY_DEV_URL}
+    devUrl:  ""
+    devUrl:  ${?SINGULARITY_DEV_URL}
   }
 
   slack {
+
+    // To select the channel
+    channel {
+      important: "#my_channel"        ## Channel for important msgs
+      important: ${?SLACK_CHANNEL_IMPORTANT}
+      info:      "#my_other_channel"  ## Channel for no important msgs
+      info:      ${?SLACK_CHANNEL_INFO}
+
+      infoLink: "https://gonitro.slack.com/messages/<<change it>>"
+      infoLink:  ${?SLACK_CHANNEL_INFOLINK}
+    }
 
     // Setup
     url: "https://hooks.slack.com/services/<<change it>>/<<change it>>/"
