Clean up resource before opening it.

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,8 +1,5 @@
 singularity_broadcast {
   singularity {
-    //prodUrl: "http://prod-singularity.uw2.nitro.us/singularity"
-    //devUrl: "http://dev-singularity.uw2.nitro.us/singularity"
-
     prodUrl: "http://192.168.99.100:7099/singularity"
     prodUrl: ${?SINGULARITY_PROD_URL}
     devUrl: "http://192.168.99.100:7099/singularity"
@@ -13,16 +10,17 @@ singularity_broadcast {
 
     // To select the channel
     channel {
-      important: "@felix"
+      important: "#my_channel"  ## Channel for important msgs
       important: ${?SLACK_CHANNEL_IMPORTANT}
-      info: "@felix"
+      info: "#my_other_channel"  ## Channel for no important msgs
       info: ${?SLACK_CHANNEL_INFO}
 
-      infoLink: "https://gonitro.slack.com/messages/C7RST0KLG"
+      infoLink: "https://gonitro.slack.com/messages/<<change it>>"
+      infoLink: ${?SLACK_CHANNEL_INFOLINK}
     }
 
-    // Setup at https://gonitro.slack.com/services/B2AU1HR6Z#service_setup
-    url: "https://hooks.slack.com/services/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"
+    // Setup
+    url: "https://hooks.slack.com/services/<<change it>>/<<change it>>/"
     url: ${?SLACK_URL}
     baseJson: """
             {
@@ -35,7 +33,9 @@ singularity_broadcast {
   }
 
   newRelic {
-    accountId: 196327
-    apiKey: "92f79eae232b9ee440c4dd08f0624b9a620e9ceff5a9506"
+    accountId: -1
+    accountId: ${?NEWRELIC_ACCOUNTID}
+    apiKey: ""
+    apiKey: ${?NEWRELIC_APIKEY}
   }
 }
