--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -15,7 +15,7 @@ singularity_broadcast {
       info: "#my_other_channel"  ## Channel for no important msgs
       info: ${?SLACK_CHANNEL_INFO}
 
-      infoLink: "https://gonitro.slack.com/messages/<<change it>>"
+      infoLink: "${?SLACK_TEAM_URL}/messages/<<change it>>"
       infoLink: ${?SLACK_CHANNEL_INFOLINK}
     }
 
