Clean up the Slack team URL

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -15,8 +15,8 @@ singularity_broadcast {
       info:      "#my_other_channel" ## Channel for no important msgs
       info:      ${?SLACK_CHANNEL_INFO}
 
-      infoLink: "https://gonitro.slack.com/messages/<<change it>>"
-      infoLink:  ${?SLACK_CHANNEL_INFOLINK}
+      infoLink: "<<change it>>/messages/<<change it>>"
+      infoLink: ${?SLACK_CHANNEL_INFOLINK}
     }
 
     // Setup
